--- a/build.xml
+++ b/build.xml
@@ -37,7 +37,7 @@ one of {original, mutant-1, mutant-2, mutant-3, mutant-4, mutant-5}">
         <mkdir dir="classes/programs/${program}"/>
         <depend srcdir="programs/${program}" destdir="classes/programs/${program}"
                 cache=".depcache/programs/${program}" closure="yes"/>
-        <javac srcdir="programs/${program}" destdir="classes/programs/${program}" debug="true"
+        <javac srcdir="programs/${program}" destdir="classes/programs/${program}" debug="true" encoding="UTF-8"
                classpath="lib/junit-4.11.jar;lib/hamcrest-core-1.3.jar;lib/commons-lang3-3.15.0.jar" includeantruntime="false"/>
     </target>
 
@@ -45,7 +45,7 @@ one of {original, mutant-1, mutant-2, mutant-3, mutant-4, mutant-5}">
         <mkdir dir="classes/programs/original"/>
         <depend srcdir="tests" destdir="classes/programs/original"
                 cache=".depcache/programs/original" closure="yes"/>
-        <javac srcdir="programs/original" destdir="classes/programs/original"
+        <javac srcdir="programs/original" destdir="classes/programs/original" encoding="UTF-8"
                classpath="lib/junit-4.11.jar;lib/hamcrest-core-1.3.jar;lib/commons-lang3-3.15.0.jar" includeantruntime="false"/>
     </target>
 
@@ -53,7 +53,7 @@ one of {original, mutant-1, mutant-2, mutant-3, mutant-4, mutant-5}">
         <mkdir dir="classes/tests"/>
         <depend srcdir="tests/" destdir="classes/tests/"
                 cache=".depcache/tests/" closure="yes"/>
-        <javac srcdir="tests/" destdir="classes/tests/"
+        <javac srcdir="tests/" destdir="classes/tests/" encoding="UTF-8"
                classpath="lib/junit-4.11.jar;lib/hamcrest-core-1.3.jar;lib/commons-lang3-3.15.0.jar;classes/programs/original"
                includeantruntime="false"/>
     </target>
